--- a/libs/user/src/lib/sso/sso-button.component.html
+++ b/libs/user/src/lib/sso/sso-button.component.html
@@ -2,5 +2,5 @@
   class="sso-button"
   (click)="onClick()">
   <pa-icon [path]="icon"></pa-icon>
-  {{ (signup ? 'login.sign-up-with' : 'login.continue_with') | translate: { provider: providerName } }}
+  {{ (signup ? 'signup.sign-up-with' : 'login.continue_with') | translate: { provider: providerName } }}
 </button>
