[sc-7722] New onboarding flow
  - New wording on sign-up and first questions
  - Refactor onboarding in several steps
  - Update zone service to optionally return zones not available yet
  - Don't display "create account" and "manage account" options at the same time in the user menu
  - Update sistema default border radius to be 0 as in figma (impacting mainly checkboxes and popups)

--- a/libs/common/src/lib/user-menu/user-menu.component.html
+++ b/libs/common/src/lib/user-menu/user-menu.component.html
@@ -32,8 +32,7 @@
       (click)="createAccount()">
       {{ 'generic.create_account' | translate }}
     </pa-option>
-  }
-  @if (!standalone) {
+  } @else if (!standalone) {
     <pa-option
       data-cy="go-to-manage-account"
       icon="account"
