--- a/libs/sync/src/lib/main-layout/sidebar.component.scss
+++ b/libs/sync/src/lib/main-layout/sidebar.component.scss
@@ -2,10 +2,12 @@
 
 .sidebar {
   background: $color-neutral-lightest;
+  display: flex;
+  flex-direction: column;
   height: calc(100% - #{rhythm(9)});
   position: fixed;
   top: rhythm(9);
-  left: 0;
+  left: auto;
   overflow-y: auto;
   padding-top: rhythm(6);
   width: rhythm(35);
@@ -73,6 +75,14 @@
           visibility: visible;
         }
       }
+    }
+  }
+
+  .status {
+    border-top: 1px solid $color-neutral-light;
+    margin-top: auto;
+    &.down {
+      color: $color-secondary-stronger;
     }
   }
 }
