--- a/libs/sync/src/lib/upload/settings/settings.component.html
+++ b/libs/sync/src/lib/upload/settings/settings.component.html
@@ -178,13 +178,13 @@
       type="submit"
       kind="primary"
       [disabled]="form.invalid">
-      {{ 'generic.save' | translate }}
+      {{ 'action.save' | translate }}
     </pa-button>
     <pa-button
       qa="cancel"
       aspect="basic"
       (click)="onCancel()">
-      {{ 'generic.cancel' | translate }}
+      {{ 'action.cancel' | translate }}
     </pa-button>
   </div>
 </form>
