Getting started modal
  - New `getting-started` modal with one component by step (intro, upload, processing)
  - Create `upload.utils.ts` with some upload utility methods like `getFilesByType`, `getFilesGroupedByType`
  - Refactor uploadService:
     - we can now use its uploadFiles method without triggering any toast
     - new method `checkFileTypesAndConfirm` for warnings about spreadsheet and archive uploads
  - Move progress-bar component to sistema

--- a/libs/common/src/lib/upload/upload-bar/upload-bar.component.html
+++ b/libs/common/src/lib/upload/upload-bar/upload-bar.component.html
@@ -4,9 +4,7 @@
     [innerHTML]="'upload.uploading_files' | translate"></div>
 
   <div class="upload-bar-progress">
-    <stf-progress-bar
-      track="white"
-      [progress]="progress | async"></stf-progress-bar>
+    <nsi-progress-bar [progress]="progress | async"></nsi-progress-bar>
   </div>
 
   <div class="upload-bar-percentage">
