--- a/libs/common/src/lib/upload/upload-data/upload-option/upload-option.component.html
+++ b/libs/common/src/lib/upload/upload-data/upload-option/upload-option.component.html
@@ -1,4 +1,6 @@
-<button class="upload-option">
+<button
+  class="upload-option"
+  [class.active]="active">
   <pa-icon
     [name]="icon"
     size="large"></pa-icon>
