--- a/libs/common/src/lib/upload/upload-data/upload-option/upload-option.component.scss
+++ b/libs/common/src/lib/upload/upload-data/upload-option/upload-option.component.scss
@@ -17,7 +17,8 @@
     background: $color-neutral-lighter;
   }
 
-  &:active {
+  &:active,
+  &.active {
     background: $color-neutral-light;
   }
 }
