--- a/libs/sistema/src/lib/progress/progress-bar/progress-bar.component.html
+++ b/libs/sistema/src/lib/progress/progress-bar/progress-bar.component.html
@@ -1,6 +1,7 @@
 <div
   class="progress-bar"
-  [class]="'progress-bar-' + track">
+  [class.grey-track]="greyTrack"
+  [class.grey-bar]="greyBar">
   <div
     class="progress"
     [class.indeterminate]="isIndeterminate"
