--- a/libs/sistema/theme/tokens/_expander.tokens.scss
+++ b/libs/sistema/theme/tokens/_expander.tokens.scss
@@ -1,10 +1,12 @@
 @import './palette.tokens';
 @import '../../../pastanaga-angular/projects/pastanaga-angular/src/styles/theme/spacing.tokens';
 
+$box-shadow-border-bottom: inset 0 -1px 0 $color-neutral-lighter;
+
 // Collapsed theme
 $background-color-collapsed-expander-header: $color-neutral-lightest;
 $background-color-collapsed-expander-header-hover: $color-neutral-lighter;
-$box-shadow-collapsed-expander-header: inset 0 -1px 0 $color-neutral-lighter;
+$box-shadow-collapsed-expander-header: $box-shadow-border-bottom;
 $color-collapsed-expander-header-title: $color-dark-stronger;
 $color-collapsed-expander-header-icon: $color-dark-stronger;
 
