--- a/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
@@ -41,6 +41,21 @@
         Dedicated processors state:
         <strong style="text-transform: capitalize">{{ (account | async)?.dedicatedProcessorsState }}</strong>
       </div>
+      <div>
+        Activity:
+        <a
+          [href]="'http://redash.nuclia.com/queries/25?p_account=' + (account | async)?.id"
+          target="_blank"
+          rel="noopener noreferrer">
+          Redash
+        </a>
+        <a
+          href="http://europe1.grafana.nuclia.com/d/MiFMjG57z/8-messaging-nats-jetstream?orgId=1&refresh=10s&var-js_domain=All&var-server=All&var-stream=ingest&var-consumer=processor-slow-&from=now-1h&to=now"
+          target="_blank"
+          rel="noopener noreferrer">
+          Grafana
+        </a>
+      </div>
     </div>
     <nav>
       <ul>
