--- a/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
+++ b/apps/manager-v2/src/app/manage-accounts/account-details/account-details.component.html
@@ -50,7 +50,10 @@
           Redash
         </a>
         <a
-          href="http://europe1.grafana.nuclia.com/d/MiFMjG57z/8-messaging-nats-jetstream?orgId=1&refresh=10s&var-js_domain=All&var-server=All&var-stream=ingest&var-consumer=processor-slow-&from=now-1h&to=now"
+          [href]="
+            'http://europe1.grafana.nuclia.com/d/MiFMjG57z/8-messaging-nats-jetstream?orgId=1&refresh=10s&var-js_domain=All&var-server=All&var-stream=ingest&from=now-1h&to=now&var-consumer=processor-slow-' +
+            (account | async)?.id
+          "
           target="_blank"
           rel="noopener noreferrer">
           Grafana
